# localization

./: CMakeLists.txt  README.md  frames.gv  package.xml
include/: IOFromBoard.msg  serial_com.h
include/localization/: pole.h  serial_com.h
launch/: bot_loc.launch  get_poles.launch  intensity_test.launch  laser_angle.launch  locate.launch  locate_fake_scan.launch  locate_fake_scan_error.launch  locate_no_imu.launch  output_simulator.launch  pole_extract.launch
msg/: beach_map.msg  line.msg  pole_cords.msg  scan_point.msg  scan_vector.msg  xy_vector.msg
src/: bot_loc.cpp  bot_loc.cpp.backup  fake_scan (copy).cpp  fake_scan.cpp  find_poles.cpp  get_poles.cpp  get_poles.cpp.backup  get_poles_test.cpp  get_poles_test.cpp.backup  init_poles.cpp  intensity_test.cpp  laser_angle.cpp  laser_filter.cpp  localization.cpp  locate.cpp  locate.cpp~  locate.h  locate_helper.cpp  locate_initiate.cpp  locate_kalman.cpp  locate_old.cpp  output_simulator.cpp  pole.cpp  pole.h
src (copy)/: error_checker.cpp  fake_scan.cpp  intensity_test.cpp  locate_helper.cpp  locate_kalman.cpp  pole.h
srv/: InitLocalization.srv
yaml/: config.yaml  laser_config.yaml
